minhaLinguagemParser.py
# Generated from C:/Compilador/minhaLinguagem.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class minhaLinguagemParser ( Parser ):

    grammarFileName = "minhaLinguagem.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'!'", "'escrever'", "'ler'", "'se'", 
                     "'entao'", "'senao'", "'enquanto'", "'fa\\u00E7a'", 
                     "'fim'", "'inteiro'", "'string'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "';'", "'\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "ESCREVER", 
                      "LER", "SE", "ENTAO", "SENAO", "ENQUANTO", "FA\u0002A", 
                      "FIM", "INTEIRO", "STRING", "ID", "NUMERO", "OP_ARIT", 
                      "OP_LOGICO", "OP_COMPARACAO", "ABRE_PAR", "FECHA_PAR", 
                      "FINAL", "ASPAS", "ESP_BRANCO" ]

    RULE_programa = 0
    RULE_comandos = 1
    RULE_comando_ler = 2
    RULE_comando_escrever = 3
    RULE_comando_condicional = 4
    RULE_comando_repeticao = 5
    RULE_comando_atribuicao = 6
    RULE_comando_declaracao = 7
    RULE_tipo = 8
    RULE_expressao = 9
    RULE_expressao_aritmetica = 10
    RULE_termo = 11
    RULE_expressao_logica = 12
    RULE_fator_logico = 13

    ruleNames =  [ "programa", "comandos", "comando_ler", "comando_escrever", 
                   "comando_condicional", "comando_repeticao", "comando_atribuicao", 
                   "comando_declaracao", "tipo", "expressao", "expressao_aritmetica", 
                   "termo", "expressao_logica", "fator_logico" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    ESCREVER=3
    LER=4
    SE=5
    ENTAO=6
    SENAO=7
    ENQUANTO=8
    FAÇA=9
    FIM=10
    INTEIRO=11
    STRING=12
    ID=13
    NUMERO=14
    OP_ARIT=15
    OP_LOGICO=16
    OP_COMPARACAO=17
    ABRE_PAR=18
    FECHA_PAR=19
    FINAL=20
    ASPAS=21
    ESP_BRANCO=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comandos(self):
            return self.getTypedRuleContext(minhaLinguagemParser.ComandosContext,0)


        def EOF(self):
            return self.getToken(minhaLinguagemParser.EOF, 0)

        def getRuleIndex(self):
            return minhaLinguagemParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = minhaLinguagemParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.comandos()
            self.state = 29
            self.match(minhaLinguagemParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando_ler(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(minhaLinguagemParser.Comando_lerContext)
            else:
                return self.getTypedRuleContext(minhaLinguagemParser.Comando_lerContext,i)


        def comando_escrever(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(minhaLinguagemParser.Comando_escreverContext)
            else:
                return self.getTypedRuleContext(minhaLinguagemParser.Comando_escreverContext,i)


        def comando_condicional(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(minhaLinguagemParser.Comando_condicionalContext)
            else:
                return self.getTypedRuleContext(minhaLinguagemParser.Comando_condicionalContext,i)


        def comando_repeticao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(minhaLinguagemParser.Comando_repeticaoContext)
            else:
                return self.getTypedRuleContext(minhaLinguagemParser.Comando_repeticaoContext,i)


        def comando_atribuicao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(minhaLinguagemParser.Comando_atribuicaoContext)
            else:
                return self.getTypedRuleContext(minhaLinguagemParser.Comando_atribuicaoContext,i)


        def comando_declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(minhaLinguagemParser.Comando_declaracaoContext)
            else:
                return self.getTypedRuleContext(minhaLinguagemParser.Comando_declaracaoContext,i)


        def getRuleIndex(self):
            return minhaLinguagemParser.RULE_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandos" ):
                listener.enterComandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandos" ):
                listener.exitComandos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandos" ):
                return visitor.visitComandos(self)
            else:
                return visitor.visitChildren(self)




    def comandos(self):

        localctx = minhaLinguagemParser.ComandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comandos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 37
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4]:
                    self.state = 31
                    self.comando_ler()
                    pass
                elif token in [3]:
                    self.state = 32
                    self.comando_escrever()
                    pass
                elif token in [5]:
                    self.state = 33
                    self.comando_condicional()
                    pass
                elif token in [8]:
                    self.state = 34
                    self.comando_repeticao()
                    pass
                elif token in [13]:
                    self.state = 35
                    self.comando_atribuicao()
                    pass
                elif token in [11, 12]:
                    self.state = 36
                    self.comando_declaracao()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 39 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 14648) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_lerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LER(self):
            return self.getToken(minhaLinguagemParser.LER, 0)

        def ABRE_PAR(self):
            return self.getToken(minhaLinguagemParser.ABRE_PAR, 0)

        def ID(self):
            return self.getToken(minhaLinguagemParser.ID, 0)

        def FECHA_PAR(self):
            return self.getToken(minhaLinguagemParser.FECHA_PAR, 0)

        def FINAL(self):
            return self.getToken(minhaLinguagemParser.FINAL, 0)

        def getRuleIndex(self):
            return minhaLinguagemParser.RULE_comando_ler

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_ler" ):
                listener.enterComando_ler(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_ler" ):
                listener.exitComando_ler(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando_ler" ):
                return visitor.visitComando_ler(self)
            else:
                return visitor.visitChildren(self)




    def comando_ler(self):

        localctx = minhaLinguagemParser.Comando_lerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_comando_ler)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(minhaLinguagemParser.LER)
            self.state = 42
            self.match(minhaLinguagemParser.ABRE_PAR)
            self.state = 43
            self.match(minhaLinguagemParser.ID)
            self.state = 44
            self.match(minhaLinguagemParser.FECHA_PAR)
            self.state = 45
            self.match(minhaLinguagemParser.FINAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_escreverContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESCREVER(self):
            return self.getToken(minhaLinguagemParser.ESCREVER, 0)

        def ABRE_PAR(self):
            return self.getToken(minhaLinguagemParser.ABRE_PAR, 0)

        def FECHA_PAR(self):
            return self.getToken(minhaLinguagemParser.FECHA_PAR, 0)

        def FINAL(self):
            return self.getToken(minhaLinguagemParser.FINAL, 0)

        def ASPAS(self, i:int=None):
            if i is None:
                return self.getTokens(minhaLinguagemParser.ASPAS)
            else:
                return self.getToken(minhaLinguagemParser.ASPAS, i)

        def ID(self):
            return self.getToken(minhaLinguagemParser.ID, 0)

        def getRuleIndex(self):
            return minhaLinguagemParser.RULE_comando_escrever

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_escrever" ):
                listener.enterComando_escrever(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_escrever" ):
                listener.exitComando_escrever(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando_escrever" ):
                return visitor.visitComando_escrever(self)
            else:
                return visitor.visitChildren(self)




    def comando_escrever(self):

        localctx = minhaLinguagemParser.Comando_escreverContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_comando_escrever)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(minhaLinguagemParser.ESCREVER)
            self.state = 48
            self.match(minhaLinguagemParser.ABRE_PAR)
            self.state = 53
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.state = 49
                self.match(minhaLinguagemParser.ASPAS)
                self.state = 50
                self.match(minhaLinguagemParser.ID)
                self.state = 51
                self.match(minhaLinguagemParser.ASPAS)
                pass
            elif token in [13]:
                self.state = 52
                self.match(minhaLinguagemParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 55
            self.match(minhaLinguagemParser.FECHA_PAR)
            self.state = 56
            self.match(minhaLinguagemParser.FINAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_condicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SE(self):
            return self.getToken(minhaLinguagemParser.SE, 0)

        def ABRE_PAR(self):
            return self.getToken(minhaLinguagemParser.ABRE_PAR, 0)

        def expressao(self):
            return self.getTypedRuleContext(minhaLinguagemParser.ExpressaoContext,0)


        def FECHA_PAR(self):
            return self.getToken(minhaLinguagemParser.FECHA_PAR, 0)

        def ENTAO(self):
            return self.getToken(minhaLinguagemParser.ENTAO, 0)

        def comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(minhaLinguagemParser.ComandosContext)
            else:
                return self.getTypedRuleContext(minhaLinguagemParser.ComandosContext,i)


        def FIM(self):
            return self.getToken(minhaLinguagemParser.FIM, 0)

        def SENAO(self):
            return self.getToken(minhaLinguagemParser.SENAO, 0)

        def getRuleIndex(self):
            return minhaLinguagemParser.RULE_comando_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_condicional" ):
                listener.enterComando_condicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_condicional" ):
                listener.exitComando_condicional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando_condicional" ):
                return visitor.visitComando_condicional(self)
            else:
                return visitor.visitChildren(self)




    def comando_condicional(self):

        localctx = minhaLinguagemParser.Comando_condicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_comando_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(minhaLinguagemParser.SE)
            self.state = 59
            self.match(minhaLinguagemParser.ABRE_PAR)
            self.state = 60
            self.expressao()
            self.state = 61
            self.match(minhaLinguagemParser.FECHA_PAR)
            self.state = 62
            self.match(minhaLinguagemParser.ENTAO)
            self.state = 63
            self.comandos()
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 64
                self.match(minhaLinguagemParser.SENAO)
                self.state = 65
                self.comandos()


            self.state = 68
            self.match(minhaLinguagemParser.FIM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_repeticaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENQUANTO(self):
            return self.getToken(minhaLinguagemParser.ENQUANTO, 0)

        def ABRE_PAR(self):
            return self.getToken(minhaLinguagemParser.ABRE_PAR, 0)

        def expressao(self):
            return self.getTypedRuleContext(minhaLinguagemParser.ExpressaoContext,0)


        def FECHA_PAR(self):
            return self.getToken(minhaLinguagemParser.FECHA_PAR, 0)

        def FAÇA(self):
            return self.getToken(minhaLinguagemParser.FAÇA, 0)

        def comandos(self):
            return self.getTypedRuleContext(minhaLinguagemParser.ComandosContext,0)


        def FIM(self):
            return self.getToken(minhaLinguagemParser.FIM, 0)

        def getRuleIndex(self):
            return minhaLinguagemParser.RULE_comando_repeticao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_repeticao" ):
                listener.enterComando_repeticao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_repeticao" ):
                listener.exitComando_repeticao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando_repeticao" ):
                return visitor.visitComando_repeticao(self)
            else:
                return visitor.visitChildren(self)




    def comando_repeticao(self):

        localctx = minhaLinguagemParser.Comando_repeticaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_comando_repeticao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(minhaLinguagemParser.ENQUANTO)
            self.state = 71
            self.match(minhaLinguagemParser.ABRE_PAR)
            self.state = 72
            self.expressao()
            self.state = 73
            self.match(minhaLinguagemParser.FECHA_PAR)
            self.state = 74
            self.match(minhaLinguagemParser.FAÇA)
            self.state = 75
            self.comandos()
            self.state = 76
            self.match(minhaLinguagemParser.FIM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_atribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(minhaLinguagemParser.ID, 0)

        def expressao(self):
            return self.getTypedRuleContext(minhaLinguagemParser.ExpressaoContext,0)


        def FINAL(self):
            return self.getToken(minhaLinguagemParser.FINAL, 0)

        def getRuleIndex(self):
            return minhaLinguagemParser.RULE_comando_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_atribuicao" ):
                listener.enterComando_atribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_atribuicao" ):
                listener.exitComando_atribuicao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando_atribuicao" ):
                return visitor.visitComando_atribuicao(self)
            else:
                return visitor.visitChildren(self)




    def comando_atribuicao(self):

        localctx = minhaLinguagemParser.Comando_atribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_comando_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(minhaLinguagemParser.ID)
            self.state = 79
            self.match(minhaLinguagemParser.T__0)
            self.state = 80
            self.expressao()
            self.state = 81
            self.match(minhaLinguagemParser.FINAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_declaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(minhaLinguagemParser.TipoContext,0)


        def ABRE_PAR(self):
            return self.getToken(minhaLinguagemParser.ABRE_PAR, 0)

        def ID(self):
            return self.getToken(minhaLinguagemParser.ID, 0)

        def FECHA_PAR(self):
            return self.getToken(minhaLinguagemParser.FECHA_PAR, 0)

        def FINAL(self):
            return self.getToken(minhaLinguagemParser.FINAL, 0)

        def getRuleIndex(self):
            return minhaLinguagemParser.RULE_comando_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_declaracao" ):
                listener.enterComando_declaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_declaracao" ):
                listener.exitComando_declaracao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando_declaracao" ):
                return visitor.visitComando_declaracao(self)
            else:
                return visitor.visitChildren(self)




    def comando_declaracao(self):

        localctx = minhaLinguagemParser.Comando_declaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_comando_declaracao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.tipo()
            self.state = 84
            self.match(minhaLinguagemParser.ABRE_PAR)
            self.state = 85
            self.match(minhaLinguagemParser.ID)
            self.state = 86
            self.match(minhaLinguagemParser.FECHA_PAR)
            self.state = 87
            self.match(minhaLinguagemParser.FINAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEIRO(self):
            return self.getToken(minhaLinguagemParser.INTEIRO, 0)

        def STRING(self):
            return self.getToken(minhaLinguagemParser.STRING, 0)

        def getRuleIndex(self):
            return minhaLinguagemParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = minhaLinguagemParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            _la = self._input.LA(1)
            if not(_la==11 or _la==12):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao_logica(self):
            return self.getTypedRuleContext(minhaLinguagemParser.Expressao_logicaContext,0)


        def expressao_aritmetica(self):
            return self.getTypedRuleContext(minhaLinguagemParser.Expressao_aritmeticaContext,0)


        def getRuleIndex(self):
            return minhaLinguagemParser.RULE_expressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao" ):
                listener.enterExpressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao" ):
                listener.exitExpressao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressao" ):
                return visitor.visitExpressao(self)
            else:
                return visitor.visitChildren(self)




    def expressao(self):

        localctx = minhaLinguagemParser.ExpressaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expressao)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.expressao_logica()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.expressao_aritmetica()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expressao_aritmeticaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(minhaLinguagemParser.TermoContext)
            else:
                return self.getTypedRuleContext(minhaLinguagemParser.TermoContext,i)


        def OP_ARIT(self, i:int=None):
            if i is None:
                return self.getTokens(minhaLinguagemParser.OP_ARIT)
            else:
                return self.getToken(minhaLinguagemParser.OP_ARIT, i)

        def getRuleIndex(self):
            return minhaLinguagemParser.RULE_expressao_aritmetica

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao_aritmetica" ):
                listener.enterExpressao_aritmetica(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao_aritmetica" ):
                listener.exitExpressao_aritmetica(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressao_aritmetica" ):
                return visitor.visitExpressao_aritmetica(self)
            else:
                return visitor.visitChildren(self)




    def expressao_aritmetica(self):

        localctx = minhaLinguagemParser.Expressao_aritmeticaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expressao_aritmetica)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.termo()

            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 96
                self.match(minhaLinguagemParser.OP_ARIT)
                self.state = 97
                self.termo()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMERO(self):
            return self.getToken(minhaLinguagemParser.NUMERO, 0)

        def ID(self):
            return self.getToken(minhaLinguagemParser.ID, 0)

        def ABRE_PAR(self):
            return self.getToken(minhaLinguagemParser.ABRE_PAR, 0)

        def expressao_aritmetica(self):
            return self.getTypedRuleContext(minhaLinguagemParser.Expressao_aritmeticaContext,0)


        def FECHA_PAR(self):
            return self.getToken(minhaLinguagemParser.FECHA_PAR, 0)

        def getRuleIndex(self):
            return minhaLinguagemParser.RULE_termo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermo" ):
                listener.enterTermo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermo" ):
                listener.exitTermo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermo" ):
                return visitor.visitTermo(self)
            else:
                return visitor.visitChildren(self)




    def termo(self):

        localctx = minhaLinguagemParser.TermoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_termo)
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.match(minhaLinguagemParser.NUMERO)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.match(minhaLinguagemParser.ID)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.match(minhaLinguagemParser.ABRE_PAR)
                self.state = 106
                self.expressao_aritmetica()
                self.state = 107
                self.match(minhaLinguagemParser.FECHA_PAR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expressao_logicaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao_aritmetica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(minhaLinguagemParser.Expressao_aritmeticaContext)
            else:
                return self.getTypedRuleContext(minhaLinguagemParser.Expressao_aritmeticaContext,i)


        def OP_COMPARACAO(self):
            return self.getToken(minhaLinguagemParser.OP_COMPARACAO, 0)

        def fator_logico(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(minhaLinguagemParser.Fator_logicoContext)
            else:
                return self.getTypedRuleContext(minhaLinguagemParser.Fator_logicoContext,i)


        def OP_LOGICO(self, i:int=None):
            if i is None:
                return self.getTokens(minhaLinguagemParser.OP_LOGICO)
            else:
                return self.getToken(minhaLinguagemParser.OP_LOGICO, i)

        def getRuleIndex(self):
            return minhaLinguagemParser.RULE_expressao_logica

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao_logica" ):
                listener.enterExpressao_logica(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao_logica" ):
                listener.exitExpressao_logica(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressao_logica" ):
                return visitor.visitExpressao_logica(self)
            else:
                return visitor.visitChildren(self)




    def expressao_logica(self):

        localctx = minhaLinguagemParser.Expressao_logicaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expressao_logica)
        self._la = 0 # Token type
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.expressao_aritmetica()
                self.state = 112
                self.match(minhaLinguagemParser.OP_COMPARACAO)
                self.state = 113
                self.expressao_aritmetica()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.fator_logico()

                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==16:
                    self.state = 116
                    self.match(minhaLinguagemParser.OP_LOGICO)
                    self.state = 117
                    self.fator_logico()
                    self.state = 122
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

